fixing spacing

--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@ section.page {
   margin-left: calc(-50vw + 50%);
   background-color: white;
   text-align: center;
-  padding: 8rem 2rem;
+  padding: 4rem 2rem;
 }
 
 section.page h2 {
@@ -73,7 +73,7 @@ section.page p {
 section.intro {
   width: 100%;
   min-height: 100vh;
-  padding: 4rem 0;
+  padding: 2rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
